test cont | issue: at end of animation, the loadscreen moves back to the top of the page and visibility/display are not set to hidden/none as intended | test fix: change js attribute change to set an id on the loadcontainer, then add a dormant css id that targets that id to make the change in animation time

--- a/main.css
+++ b/main.css
@@ -220,7 +220,7 @@ main {
     #loadcontainer {height: calc(237vw + 427px);}
   }
 
-#loadscreen {
+.loadscreen {
   width: 100%;
   height: 100%;
 /*  background-color: red;*/
@@ -241,12 +241,14 @@ background-repeat: repeat;
 
 }
 
-#loadscreen>img{
+.loadscreen>img{
   width: 184px;
   height: 255px;
 }
 
-
+#loadscreen-notfirst{
+  animation: scrolldown 5s linear 1;
+}
  
 
 @media screen and (max-width: 850px){
